--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,8 +119,13 @@ footer {
     background: #666666;
   }
   @media screen and (max-width: 980px) {
+    .name{
+      width: 30%;
+      margin-left:8%;
+    }
     #btn-group{
       width:100%;
+      margin-left: -51px;
     }
     .maincontent{
       width:80%;
@@ -158,7 +163,7 @@ footer {
       position: static;
     }
     .name{
-      width: 600px;
+      width: 700px;
       margin-left: -9%;
     }
     #btn-group{
