--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ strong{
 }
 .name{
     background: #4aaaa5;
-    position: relative;
+    position: relaive;
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-left: 13%;
